--- a/meeting_notes/Sep25_2018/note.tex
+++ b/meeting_notes/Sep25_2018/note.tex
@@ -115,7 +115,7 @@ The classical surrogate-enabled inference setup: iid Gaussian noise on $h_{ij}-Q
 \includegraphics[width=0.53\textwidth]{figs/fitshade_34_23.eps}\\
 \includegraphics[width=0.53\textwidth]{figs/fit1d_36_13.eps}\hfill
 \includegraphics[width=0.53\textwidth]{figs/fitshade_36_13.eps}
-\caption{\label{fig:fits1} Inference1. Lareg black dots are the mean data points, smaller ones are all samples across years.}
+\caption{\label{fig:fits1} Inference1. Large black dots are the mean data points, smaller ones are all samples across years. The right column, the shaded plots, show prior (red) and posterior (green) quantiles.}
 \end{figure}
 \begin{figure}[!hb]
 \includegraphics[width=0.53\textwidth]{figs/fit1d_40_28.eps}\hfill
